# LangGraph_LangChain_Tools_ReAct_Agents

./: 1_first_graph.ipynb  pyproject.toml  requirements.txt
Notebooks/: 10_Generator_Evaluator.ipynb  2_pydantic.ipynb  3_Messages.ipynb  4_Pormpts.ipynb  6_ReAct.ipynb  7_Prallelization.ipynb  8-Routing.ipynb  9_Orchestartor_Workflow.ipynb  Tools&Binding.ipynb
