[project]
name = "lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
]
